# pantheon-agent-polkit

./: .travis.yml  CMakeLists.txt  README.md  meson.build
.github/workflows/: main.yml
data/: CMakeLists.txt  agent-polkit-daemon.service.in  agent-polkit.appdata.xml.in  agent-polkit.metainfo.xml.in  io.elementary.pantheon-agent-polkit-daemon.desktop.in  meson.build  org.pantheon.agent-polkit-daemon.desktop.in  org.pantheon.agent-polkit.desktop.in  org.pantheon.agent-polkit.desktop.in.in
debian/: changelog  control  copyright  install  pantheon-agent-polkit.desktop  rules
po/: CMakeLists.txt  LINGUAS  POTFILES  aa.po  ab.po  ace.po  ae.po  af.po  ak.po  ar.po  as.po  av.po  az.po  be.po  bg.po  bh.po  bm.po  bn.po  bs.po  ca.po  ca@valencia.po  ckb.po  cs.po  cu.po  cy.po  da.po  de.po  dz.po  el.po  en_AU.po  en_CA.po  en_GB.po  en_ZA.po  eo.po  es.po  et.po  fa.po  fi.po  fil.po  fo.po  (+89 more)
po/extra/: POTFILES  aa.po  ab.po  ace.po  ae.po  af.po  ak.po  am.po  an.po  ar.po  as.po  ast.po  av.po  ay.po  az.po  ba.po  be.po  bg.po  bh.po  bi.po  bm.po  bn.po  bo.po  br.po  bs.po  ca.po  ca@valencia.po  ce.po  ch.po  ckb.po  co.po  cr.po  cs.po  cu.po  cv.po  cy.po  da.po  de.po  dv.po  dz.po  (+170 more)
protocol/: pantheon-desktop-shell-v1.xml  pantheon-desktop-shell.vapi
src/: Agent.vala  Application.vala  CMakeLists.txt  GcrAgent.vala  GcrConfirmDialog.vala  GcrPasswordDialog.vala  GcrPrompt.vala  Interfaces.vala  PolkitDialog.vala  Utils.vala
vapi/: accountsservice.vapi  polkit-agent-1.vapi
